qtbase-opensource-src (5.6.1+dfsg-3ubuntu6) UNRELEASED; urgency=medium


 -- Dmitry Shachnev <mitya57@ubuntu.com>  Tue, 27 Sep 2016 14:19:18 +0300

qtbase-opensource-src (5.6.1+dfsg-3ubuntu5~1) yakkety; urgency=medium

  * debian/patches/dbusmenu-Don-t-leave-dangling-pointers-when-menus-ar.patch:
    - Fix a crasher in qdbusmenu code (LP: #1620937)
  * debian/patches/QMenuBar-Get-rid-of-QMenuBarPrivate-nativeMenuBar.patch:
    - Improve menu bar code, but for now allow_native_menubar.diff is still 
      needed.

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Fri, 16 Sep 2016 05:08:05 +0000

qtbase-opensource-src (5.6.1+dfsg-3ubuntu4~6) yakkety; urgency=medium

  [ Timo Jyrinki ]
  * debian/patches/Make-QDBusConnectionPrivate-relaySignal-be-called-in.patch:
    - Antoher DBus fix needed for telephony-service (LP: #1620945)
  * debian/patches/Fix-gcc-Wsuggest-override-warning-on-Q_OBJECT.patch
    debian/patches/Fix-the-GCC-version-supporting-Wsuggest-override.patch:
    - Fix GCC -Wsuggest-override warning on Q_OBJECT (LP: #1619483)
  * debian/patches/Fix-parsing-of-tzfile-5-POSIX-rule-zone-names-with-b.patch:
    - Fix parsing of rule zone names for certain time zones (LP: #1622089)
  * debian/patches/Avoid-artifacts-when-hiding-or-closing-a-QOpenGLWidg.patch
    debian/patches/QtWidgets-Send-show-hide-event-to-children-on-restor.patch:
    - Fix event sending to children, hurting Oxide-Qt use on desktop
      (LP: #1613670)
  * Disable QStaticText tests for now (QTBUG-55653)

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Mon, 12 Sep 2016 05:42:31 +0000

qtbase-opensource-src (5.6.1+dfsg-3ubuntu3~3) yakkety; urgency=medium

  [ Timo Jyrinki ]
  * debian/patches/QDBusServer-delay-processing-of-D-Bus-messages.patch:
    - Fix DBus message processing (LP: #1608822) 
  * debian/patches/xcb-Send-also-text-plain-when-a-text-uri-list-is-dro.patch:
    - Fix drag and drop from Qt to skype (LP: #1586857)
  * debian/patches/qt5-qmake-arm-linux-gnueabihf: