@@ -1,5 +1,6 @@
 qtbase-opensource-src (5.6.1+dfsg-3ubuntu6) UNRELEASED; urgency=medium
 
+  * Mark allow_native_menubar.diff as applied upstream.
 
  -- Dmitry Shachnev <mitya57@ubuntu.com>  Tue, 27 Sep 2016 14:19:18 +0300
 
